--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,15 @@
   margin: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .app {
   width: 100vw;
   height: 100%;
