--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,3 +1,50 @@
 .footer {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 32px 0px;
+
+    .top {
+        display: flex;
+        
+
+        .item {
+            width: 180px;
+            padding: 6px 0px;
+            border-left: 1px solid #000000;
+
+            &:nth-last-child(1) {
+                border-right: 1px solid #000000;
+            }
+            
+            a {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: var(--colorPrimary);
+                text-decoration: none;
+                font-size: 14px;
+            }
+        }
+        
+    }
+
+    .bottom  {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin-top: 48px;
+        gap: 120px;
+
+        div img {
+            width: 120px;
+        }
+
+        .copyright {
+            font-size: 13px;
+            color: var(colorTertiary);
+        }
+    }
 }
