--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,68 @@
 .card {
-    
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    h2 {
+        color: var(--colorPrimary);
+        font-size: 25px;
+        margin-bottom: 48px;
+    }
+
+    .cards-wrapper {
+        height: 100%;
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        gap: 12px;
+
+        .item {
+            width: 250px;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                width: 250px;
+            }
+
+            .title {
+                font-size: 18px;
+                color: var(--colorPrimary);
+                font-weight: 600;
+                margin-top: 18px;
+            }
+
+            .desc {
+                font-size: 16px;
+                color: var(--colorSecondary);
+                margin: 12px 0 18px 0;
+                min-height: 120px;
+            }
+
+            a {
+                text-decoration: none;
+                color: #000;
+                border: 1px solid #000;
+                padding: 6px 32px;
+                justify-self: flex-end;
+                margin-top: 12px;
+
+                &:hover {
+                    color: grey;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    .san {
+        width: 100%;
+        height: 100%;
+        margin: 108px 0;
+    }
 }
