--- a/src/components/News/News.scss
+++ b/src/components/News/News.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 36px;
+    padding: 36px 0 18px 0;
 
     h2 {
         font-size: 26px;
