--- a/src/components/Client/Client.scss
+++ b/src/components/Client/Client.scss
@@ -1,3 +1,57 @@
 .client {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+        text-transform: uppercase;
+        color: var(--colorPrimary);
+        margin: 48px 0;
+        font-size: 25px;
+    }
+
+    .clients {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        margin-bottom: 48px;
+
+        .item {
+            width: auto;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 30px;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+    .news-client {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        margin-bottom: 48px;
+
+        .item {
+            width: 100px;
+            max-height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 30px;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
 }
